src/objects/BGBL__Batch_Letter__c.object
<CustomObject>
    <description>Single and Batch letter configuration</description>
    <fields>
        <fullName>BGBL__Batch_Duplex_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configure whether large batch file should accommodate duplex printing</description>
        <inlineHelpText>Start each new letter within batch on the odd page number. May create blank pages.</inlineHelpText>
        <label>Batch Duplex Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__File_Name_Prefix__c</fullName>
        <inlineHelpText>Files attached to parent records (e.g., Contacts) will utilize this &quot;friendly&quot; name plus a timestamp</inlineHelpText>
        <label>File Name Prefix</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Merge_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Template</label>
        <referenceTo>BGBL__Merge_Template__c</referenceTo>
        <relationshipName>Batch_Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBL__Output_Type_Short__c</fullName>
        <formula>IF(ispickval( BGBL__Output_Type__c ,&quot;Acrobat (.pdf)&quot;), &quot;pdf&quot;,&quot;&quot;) + 
IF(ispickval( BGBL__Output_Type__c ,&quot;Word 2003 or earlier (.doc)&quot;), &quot;doc&quot;,&quot;&quot;) +
IF(ispickval( BGBL__Output_Type__c ,&quot;Word 2007 (.docx)&quot;), &quot;docx&quot;,&quot;&quot;)</formula>
        <label>Output Type (short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Output_Type__c</fullName>
        <label>Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word 2003 or earlier (.doc)</fullName>
                </value>
                <value>
                    <fullName>Word 2007 (.docx)</fullName>
                </value>
                <value>
                    <fullName>Acrobat (.pdf)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBL__Save_Batch_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Create and save large stitched file on server. Cannot be unchecked if also not Attaching</inlineHelpText>
        <label>Save Large Batch File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBL__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGBL__Trigger_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If not set, letter is available for back and front end use</description>
        <inlineHelpText>Set if you do not want the letter to show in letter request pages</inlineHelpText>
        <label>Trigger Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Letter</label>
    <listViews>
        <fullName>BGBL__All</fullName>
        <columns>NAME</columns>
        <columns>BGBL__Merge_Template__c</columns>
        <columns>BGBL__Output_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>